chore: react-hook-form, @react-native-seoul/kaka-login 설치 및 키 셋팅

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">kino</string>
+    <string name="kakao_app_key">888acc04eb008aa77a824ace4107991b</string>
 </resources>
